--- a/.example.env
+++ b/.example.env
@@ -20,3 +20,7 @@ PRISMA_STUDIO_PORT = '5555'
 NEXT_PORT = '3000'
 PUBLIC_NEST_URL = 'http://127.0.0.1:4000'
 PUBLIC_NEST_WS_URL = 'ws://127.0.0.1:5000'
+
+HTTP_PROXY_URL = 'localhost:3128'
+HTTP_PROXY_USERNAME = 'HTTP_PROXY_USERNAME'
+HTTP_PROXY_PASSWORD = 'HTTP_PROXY_PASSWORD'
