--- a/apps/crawler-app/package.json
+++ b/apps/crawler-app/package.json
@@ -18,10 +18,12 @@
     "cors": "^2.8.5",
     "cron": "^2.1.0",
     "express": "^4.18.1",
+    "googleapis": "^108.0.0",
     "nodemon": "^2.0.19",
     "playwright": "^1.25.2",
     "qs": "^6.11.0",
-    "socket.io": "^4.5.2"
+    "socket.io": "^4.5.2",
+    "socket.io-client": "^4.5.2"
   },
   "packageManager": "yarn@3.2.2",
   "devDependencies": {
