--- a/apps/nest-app/package.json
+++ b/apps/nest-app/package.json
@@ -31,8 +31,10 @@
     "@nestjs/mapped-types": "^1.1.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.11",
+    "@nestjs/platform-socket.io": "^9.1.2",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^6.1.2",
+    "@nestjs/websockets": "^9.1.2",
     "@prisma/client": "4.3.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -44,7 +46,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.6"
+    "rxjs": "^7.5.6",
+    "socket.io": "^4.5.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.1.2",
@@ -55,6 +58,7 @@
     "@types/node": "^16.11.58",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
