feat: move cron from crawler to nest

--- a/.example.env
+++ b/.example.env
@@ -16,9 +16,11 @@ GOOGLE_API_KEY = 'GOOGLE_API_KEY'
 # DB_PORT = '5432'             # if db public is needed
 CRAWLER_PORT = '5000'
 NEST_PORT = '4000'
+NEST_WS_PORT = '81'
 PRISMA_STUDIO_PORT = '5555'
 NEXT_PORT = '3000'
 PUBLIC_NEST_URL = 'http://127.0.0.1:4000'
+PUBLIC_NEST_WS_URL = 'ws://127.0.0.1:81'
 
 HTTP_PROXY_URL = 'localhost:3128'
 HTTP_PROXY_USERNAME = 'HTTP_PROXY_USERNAME'
