--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - NODE_OPTIONS=--max_old_space_size=2048
       - NODE_ENV=development
       - NEST_URL=http://nest-app:4000/
-      - IS_PROXY=$CRAWLER_IS_PROXY
+      - PUBLIC_NEST_WS_URL=$PUBLIC_NEST_WS_URL
       - HTTP_PROXY_URL=$HTTP_PROXY_URL
       - HTTP_PROXY_USERNAME=$HTTP_PROXY_USERNAME
       - HTTP_PROXY_PASSWORD=$HTTP_PROXY_PASSWORD
@@ -76,6 +76,7 @@ services:
     ports:
       - $PRISMA_STUDIO_PORT:5555
       - $NEST_PORT:4000
+      - $NEST_WS_PORT:81
     depends_on:
       - postgres
   next-app:
