--- a/apps/nest-app/package.json
+++ b/apps/nest-app/package.json
@@ -32,6 +32,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.11",
     "@nestjs/platform-socket.io": "^9.1.2",
+    "@nestjs/schedule": "^2.1.0",
     "@nestjs/serve-static": "^3.0.0",
     "@nestjs/swagger": "^6.1.2",
     "@nestjs/websockets": "^9.1.2",
@@ -53,6 +54,7 @@
     "@nestjs/cli": "^9.1.2",
     "@nestjs/schematics": "^9.0.3",
     "@nestjs/testing": "^9.0.11",
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.8",
     "@types/node": "^16.11.58",
