--- a/apps/crawler-app/package.json
+++ b/apps/crawler-app/package.json
@@ -5,22 +5,16 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --watch 'src/**/*' -e ts --exec 'ts-node' ./src/server.ts",
+    "dev": "nodemon --watch 'src/**/*' -e ts --exec 'ts-node' ./src/socket.ts",
     "build": "tsc",
-    "start": "node ./dist/server.js",
+    "start": "node ./dist/socket.js",
     "eslint:check": "eslint .",
     "eslint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@browse_clips/api": "link:../../libs/api/dist",
-    "axios": "^0.27.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
     "googleapis": "^108.0.0",
     "nodemon": "^2.0.19",
     "playwright": "^1.25.2",
-    "qs": "^6.11.0",
-    "socket.io": "^4.5.2",
     "socket.io-client": "^4.5.2"
   },
   "packageManager": "yarn@3.2.2",
@@ -28,10 +22,7 @@
     "@playwright/test": "^1.25.2",
     "@swc/core": "^1.2.249",
     "@swc/wasm": "^1.2.249",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
     "@types/node": "^18.7.16",
-    "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "dotenv": "^16.0.2",
