--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.7",
+    "hygen": "^6.2.11",
     "prettier": "2.7.1",
     "typescript": "4.8.3"
   },
