feat(next): add storybook

--- a/.example.env
+++ b/.example.env
@@ -19,6 +19,7 @@ NEST_PORT = '4000'
 NEST_WS_PORT = '81'
 PRISMA_STUDIO_PORT = '5555'
 NEXT_PORT = '3000'
+DOCS_PORT = '6006'            # Storybook Web Port
 PUBLIC_NEST_URL = 'http://127.0.0.1:4000'
 PUBLIC_NEST_WS_URL = 'ws://127.0.0.1:81'
 
