--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -9,7 +9,9 @@
     "build": "next build",
     "start": "next start",
     "eslint:check": "eslint .",
-    "eslint:fix": "eslint . --fix"
+    "eslint:fix": "eslint . --fix",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@browse_clips/api": "link:../../libs/api/dist",
@@ -34,18 +36,31 @@
     "swiper": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@mdx-js/react": "^1.6.22",
+    "@storybook/addon-actions": "^6.5.14",
+    "@storybook/addon-docs": "^6.5.14",
+    "@storybook/addon-essentials": "^6.5.14",
+    "@storybook/addon-interactions": "^6.5.14",
+    "@storybook/addon-links": "^6.5.14",
+    "@storybook/builder-webpack5": "^6.5.14",
+    "@storybook/manager-webpack5": "^6.5.14",
+    "@storybook/react": "^6.5.14",
+    "@storybook/testing-library": "^0.0.13",
     "@types/node": "18.7.16",
     "@types/qs": "^6.9.7",
     "@types/react": "18.0.18",
     "@types/react-redux": "^7.1.24",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
+    "babel-loader": "^8.3.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.7",
+    "eslint-plugin-storybook": "^0.6.8",
     "hygen": "^6.2.11",
     "prettier": "2.7.1",
     "typescript": "4.8.3"
