--- a/apps/nest-app/package.json
+++ b/apps/nest-app/package.json
@@ -37,6 +37,7 @@
     "@nestjs/swagger": "^6.1.2",
     "@nestjs/websockets": "^9.1.2",
     "@prisma/client": "4.3.1",
+    "chalk": "4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "express": "^4.18.1",
